添加了新功能，可以隐藏特定内容

--- a/docs/records/01_1.md
+++ b/docs/records/01_1.md
@@ -1,12 +1,18 @@
-!!! tip
-    ### 第一组名单
-    鳄鱼 别人的电脑 缺翼 sparkle  企鹅侦探  朝菌 树 男酮文学bot 祁晓卓 Azad 北欧毛虫
-    
-    ### keeper
-    树
+# 第一届，第一组
+
+!!! info "规则说明"
+
+    **要求**：主题是“长夏”，不能由AI辅助，小说300-1k字，诗歌八行以上。
+
+    所有人都提交稿件或截止时间到之后，主持人将所有人的文本整理，抹去作者信息并统一格式化发到群里。每位作者（当然也包括其他所有人）可以猜测每一篇文本出自谁手。
+
+    **keeper**: 树
+
+!!! note "参与者"
+    鳄鱼 , 别人的电脑 , 缺翼 , sparkle , 企鹅侦探 , 朝菌 , 树 , 男酮文学bot , 祁晓卓 , Azad , 北欧毛虫
 
 
-## 1 缺翼
+## 1 <div class="covered-text">缺翼</div>
 ---
 ### “长夏”
 
@@ -42,7 +48,7 @@
 
 <br/>
 
-## 2 Azad
+## 2 <div class="covered-text">Azad</div>
 ---
 ### 预言
 
@@ -78,7 +84,7 @@
 
 <br/>
 
-## 3 别人的电脑
+## 3 <div class="covered-text">别人的电脑</div>
 ---
 
 梦想还未碎落成枯叶，
@@ -105,7 +111,7 @@
 
 <br/>
 
-## 4 祁晓卓
+## 4 <div class="covered-text">祁晓卓</div>
 ---
 
 “你知道第四教学楼在哪里吗？”柱子哥突然这么问我。我愣了一下，对这个陌生的名词，大脑没有任何反应。“嘿嘿，你知道第四教学楼在哪里吗？”柱子哥再问了一遍。“啊？第四教学楼？等等，咱们有第四教学楼吗？”面对着这位博士延期两年的亲师兄，我再次错愕了。
@@ -124,7 +130,7 @@
 
 <br/>
 
-## 5 北欧毛虫
+## 5 <div class="covered-text">北欧毛虫</div>
 ---
 
 深陷这个星球<br/>
@@ -146,7 +152,7 @@
 
 <br/>
 
-## 6 男酮文学bot
+## 6 <div class="covered-text">男酮文学bot</div>
 ---
 
 A来到酒吧，高中生不该来的，只不过所有的人都在伪装自己不是高中生，并且这样期盼着。他穿着非主流短袖和黑西裤，穿着破条红裙的X姨在洗杯子，没削的冰块散发着刺鼻的味道，他喝酒不想加冰。
@@ -197,13 +203,13 @@ A的今日账单：
 
 车费：从警局去医院，-23.8
 
-      从医院回家，-15
+&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;从医院回家，-15
 
 伤药：-59.5
 
 <br/>
 
-## 7 朝菌
+## 7 <div class="covered-text">朝菌</div>
 ---
 
 “数据表明，在他们称为’夏’的时间段，人类群体会处于一种异常的兴奋状态。他们常常在夜间聚群，享用食物，饮用酒精溶液，制造有规律的声响，并对事物怀有超出实际的良好预期。”
@@ -254,7 +260,7 @@ A的今日账单：
 
 <br/>
 
-## 8 企鹅侦探
+## 8 <div class="covered-text">企鹅侦探</div>
 ---
 
 穿过一段短短的涵洞，就到了地铁站。迎面是强劲的冷风。
@@ -275,7 +281,7 @@ A的今日账单：
 
 <br/>
 
-## 9 鳄鱼在街上摇摆
+## 9 <div class="covered-text">鳄鱼在街上摇摆</div>
 ---
 
 屋里的空调打开着。我看向她的身体，线条平滑圆润，宛如维纳斯的雕塑在我眼前伫立。我抱紧了她，期待着下一步的动作，于是之后的一切遵循着本能。被褥下面是紧贴的肉体。我听着她在我耳边湿润燥热的喘息，和两个人如夏天的汗水一样粘腻的心跳声。<br/>
@@ -300,7 +306,7 @@ A的今日账单：
 
 <br/>
 
-## 10 Sparkle
+## 10 <div class="covered-text">Sparkle</div>
 ---
 ### 夏日狂想曲
 
@@ -316,7 +322,7 @@ A的今日账单：
 
 <br/>
 
-## 11 树
+## 11 <div class="covered-text">树</div>
 ---
 ### 夏日馈赠
 
