--- a/docs/records/03_1.md
+++ b/docs/records/03_1.md
@@ -1,8 +1,18 @@
-!!! tip "参赛选手"
+# 第三届，第一组
+
+!!! info "规则说明"
+
+    **要求**：主题是百合，不能由AI辅助，小说300-1k字，诗歌八行以上。其中允许对百合的广义解读。
+    
+    所有人都提交稿件或截止时间到之后，主持人将所有人的文本整理，抹去作者信息并统一格式化发到群里。每位作者（当然也包括其他所有人）可以猜测每一篇文本出自谁手。
+
+    **主持人**：鳄鱼在街上摇摆
+
+!!! note "参与者"
     lumina，坏掉的呵呵君，烟敛云收，Taro_z，Einsamkeit，暌违，百合文学作者。
 
 
-## lumina
+## <div class="covered-text">lumina</div>
 ---
 
 望是在七月的某个早晨离家出走的。那是个有着闷热和蝉鸣，衣服怎么晒也晒不干的夏天，很适合离家出走。睦月从床上醒来的时候，枕头边上已经空了。她揉着惺忪的睡眼来到餐桌前，没有发现那个平日里正在此处准备早餐的身影，却发现了一张字条。
@@ -57,7 +67,7 @@
 
 <br/>
 
-## 百合文学作者
+## <div class="covered-text">百合文学作者</div>
 ---
 
 只见断背山山溪缓缓流淌，河面磷光荡漾着紫金，白凝冰定睛一看，上面漂浮着一层薄薄的花粉。
@@ -84,7 +94,7 @@
 
 <br/>
 
-## Einsamkeit
+## <div class="covered-text">Einsamkeit</div>
 ---
 ### 在草地上
 
@@ -106,7 +116,7 @@
 
 <br/>
 
-## taro_z
+## <div class="covered-text">taro_z</div>
 ---
 ### 吸血鬼
 
@@ -143,7 +153,7 @@
 
 <br/>
 
-## 呵呵
+## <div class="covered-text">呵呵</div>
 ---
 ### 百合咒
 
@@ -165,7 +175,7 @@
 
 <br/>
 
-## 暌违
+## <div class="covered-text">暌违</div>
 ---
 ### 最后一次
 
@@ -199,7 +209,7 @@
 
 <br/>
 
-## 烟敛云收
+## <div class="covered-text">烟敛云收</div>
 ---
 
 高一刚进学校的时候很紧张来着，害怕陌生的人，前桌是扎着马尾的女生，已经和旁边的人聊得笑眯眯的。几分钟之后开始发新校服，所有人都站起来试穿，她套上外套之后不拉拉链，就这么转了一圈，带起来轻轻的风。只吹乱了我的头发。她第一次转过头来跟我搭话：“你打算住宿吗？”
