--- a/docs/records/03_2.md
+++ b/docs/records/03_2.md
@@ -1,8 +1,18 @@
-!!! tip "参赛选手"
+# 第三届，第二组
+
+!!! info "规则说明"
+
+    **要求**：主题是百合，不能由AI辅助，小说300-1k字，诗歌八行以上。其中允许对百合的广义解读。
+    
+    所有人都提交稿件或截止时间到之后，主持人将所有人的文本整理，抹去作者信息并统一格式化发到群里。每位作者（当然也包括其他所有人）可以猜测每一篇文本出自谁手。
+
+    **主持人**：鳄鱼在街上摇摆
+
+!!! note "参与者"
     庞德，别人的电脑，断霞回风，Cat is watching you，风蒲，辰星凌（两篇）。
 
 
-## Cat is watching you
+## <div class="covered-text">Cat is watching you</div>
 ---
 ### 齐天乐
 
@@ -12,7 +22,7 @@
 
 <br/>
 
-## 庞德
+## <div class="covered-text">庞德</div>
 ---
 ### 毁灭
 
@@ -78,7 +88,7 @@
 
 <br/>
 
-## 辰星凌
+## <div class="covered-text">辰星凌</div>
 ---
 
 走廊尽头有几台付费洗衣机。这些公用机器有一个叫做“免费桶自洁”的功能，每次洗衣服前都可以先转一转，除去上一个人残留的细菌。
@@ -91,7 +101,7 @@
 
 <br/>
 
-## 别人的电脑
+## <div class="covered-text">别人的电脑</div>
 ---
 ### 日常
 
@@ -129,7 +139,7 @@
 
 <br/>
 
-## 辰星凌
+## <div class="covered-text">辰星凌</div>
 ---
 ### 狐言狐语狐思狐想
 
@@ -147,7 +157,7 @@ TA 不再哭。TA 知道自己又发情了，只好继续数云朵。
 
 <br/>
 
-## 断霞回风
+## <div class="covered-text">断霞回风</div>
 ---
 ### 玉蝴蝶
 
@@ -169,7 +179,7 @@ TA 不再哭。TA 知道自己又发情了，只好继续数云朵。
 
 <br/>
 
-## 风蒲
+## <div class="covered-text">风蒲</div>
 ---
 
 太阳沉入海面之前，她略带些忧郁的笑容出现在书房的窗外。深秋的地锦已经显得焦黄，衬得她薰衣草色的素面长裙有了点与本人相仿的温柔。
