--- a/docs/records/01_2.md
+++ b/docs/records/01_2.md
@@ -1,12 +1,18 @@
-!!! tip
-    ### 第二组名单
-    lumina  睽违 湖2(雷克图) 猫猫  Einsamkeit Taro_Z  Melon 小虫 辰星凌 一阳来复
+# 第一届，第二组
 
-    ### keeper
-    树
+!!! info "规则说明"
+
+    **要求**：主题是“长夏”，不能由AI辅助，小说300-1k字，诗歌八行以上。
+
+    所有人都提交稿件或截止时间到之后，主持人将所有人的文本整理，抹去作者信息并统一格式化发到群里。每位作者（当然也包括其他所有人）可以猜测每一篇文本出自谁手。
+
+    **keeper**: 树
+
+!!! note "参与者"
+    lumina , 睽违 , 湖2(雷克图) , 猫猫 , Einsamkeit , Taro_Z , Melon , 小虫 , 辰星凌 , 一阳来复
 
 
-## 辰星凌
+## <div class="covered-text">辰星凌</div>
 ---
 
 又是一年夏天，我假装路过故居，想给她一个惊吓，可惜今年来早了些。漂泊久了，脑子不太灵光。
@@ -35,7 +41,7 @@
 
 <br/>
 
-## 一阳来复
+## <div class="covered-text">一阳来复</div>
 ---
 ###　长夏无松风
 
@@ -57,7 +63,7 @@
 
 <br/>
 
-## Einsamkeit
+## <div class="covered-text">Einsamkeit</div>
 ---
 
 　　“别走了。”B始终没有成功吐出这句话，它的所有偏旁和笔画在咽喉部像受惊刺猬的背针一样根根竖立，扎得她的食道壁火辣辣地疼痛。她看着A把牙刷、充电线、还有一起买的衣服整整齐齐地码进那个巨大的灰色行李箱，如果她没有扯下墙面上那些曾经送给她的明信片，B会认为这只是一次因公出差。
@@ -72,14 +78,14 @@
 
 <br/>
 
-## lumina
+## <div class="covered-text">lumina</div>
 ---
 
 沙阿执政第四十三个年头的第四个月，夏天终于在桃里思的地平线上出现。那时气候已经有几个月过于炎热和潮湿，仿佛用一张网子挥挥就能从空气里捉出水来。每当太阳拖着沉重的晚霞落下山坡，在屋中已经躲避了整整一日的人们便会掀开门帘，从街道中如雨后绿洲的鱼般纷纷涌出，来到桃里思的城墙上眺望东面的群山。城墙上，熙攘的人群在攒动着，如蝇虫般不安地窸窸窣窣。如果此时有一只猎鹰从此处的高空掠过，它的双眼将看到下方如同巢穴中蚂蚁般涌动的黑白色浪潮，在地平线上泛出的光芒中不断试探又畏缩，如同在它爪下瑟缩的野兔。上了年纪的人们对夏天上次的来临依然记忆犹新，但那些在三年战争后出生的年轻人还尚未亲眼见过夏天，只在婴孩时于父母的臂弯中听说过夏天进犯的故事。传说当夏天进军时，脚步踏过之处，泥虫从土壤中翻涌而出，种子因为过剩的温暖和潮湿在一瞬间发芽开花，随即结实枯死，在沙中只留下干瘪的果实。那种旺盛的、过剩的、因过度生长而扭曲的生命力如沙漠中坚实的沙丘，又胜过沙阿最忠诚的骑兵，只是不知疲倦，不断向前，将一切拦路之物吞噬。传说沙阿执政的第五个年头时，夏天亦曾向西侵扰至桃里思城。那时人们拖家带口向西面逃离，直到沙阿挥起长枪，亲自带兵向前，与夏天对峙二十二个月又十七天。当它退却时，留下的只有衰败的城墙、枯死的椰枣树、和落在纱帘脚下的，已经死去干瘪的飞虫。
 
 <br/>
 
-## Melon
+## <div class="covered-text">Melon</div>
 ---
 
 ​      “呼哧——呼哧——“,粗气不断从A的口中喘出，可夏天实在是太闷热了，潮湿的空气捂住A的口鼻，吐出的粗气只好又回到肺中，慢慢蒸煮着A的两片肺叶。A坚持不住了，他无法再跑道上迈开他的双腿，疲惫感席卷全身，每走一步好似在胶质中前行，困难无比。A艰难的抬起头，想看看离终点还有多远，此时，远方一抹白色映入A的眼帘，那是一位身着白裙的女子，不高不矮，戴着遮阳帽，在潮湿的夏夜跑道是那样醒目。
@@ -112,7 +118,7 @@
 
 <br/>
 
-## 猫猫
+## <div class="covered-text">猫猫</div>
 ---
 ###　奈落蘑菇导论 
 
@@ -168,7 +174,7 @@
 
 <br/>
 
-## 睽违
+## <div class="covered-text">睽违</div>
 ---
 
 长夏，土壤肥沃如血<br/>
@@ -193,7 +199,7 @@
 
 <br/>
 
-## 小虫(重)
+## <div class="covered-text">小虫(重)</div>
 ---
 
 许是有些冷了，阿飞裹了裹身上的衣服。夏日天色暗得慢，待我们真正敞开心扉，围炉夜话时，已是三更时分了。每年都有一个时候，我们会在这个地方相遇，然后聚一起聊一聊，然后又分开。他说他得回家看一看，我也想南下去玩一玩。
@@ -214,7 +220,7 @@
 
 <br/>
 
-## Taro_Z
+## <div class="covered-text">Taro_Z</div>
 ---
 ### 国语·楚语·观射父论长夏
 
@@ -226,7 +232,7 @@
 
 <br/>
 
-## 湖2(雷克图)
+## <div class="covered-text">湖2(雷克图)</div>
 ---
 
 假面骑士3V不会感觉热。这个时候要是有一双手触摸他的头盔，它一定会被烫得连连缩回手指。但他不会感到热。假面骑士3V的身体是戈德尔教授改造成的一具不朽之躯，他不会感到热。假面骑士3V现在要去杀死仙人掌怪人。骑着3V摩托，公路的风顺着他的皮衣呼啸而过。在那有着黄色烟雾笼罩的大厦，便是被仙人掌怪人支配的场所，在这片城市当中格外显眼。3V来到了大厦楼下，黄烟是从第七十三层冒出来的，从碎裂的玻璃中汹涌地上升。那里很高，而情况又那么紧急。但是3V的双腿是经过改造的，他蝗虫般地跃起，坚硬的深绿色头盔像一枚炮弹，击碎水泥和钢筋，从七十二层的碎砖当中坚硬地穿过，3V来到了仙人掌怪人的面前。“啊，你来了啊，3V！”仙人掌怪人穿着一件白纱似的长袍，他拥有绿色的光滑皮肤和遍布全身的尖刺，有一顶用仙人掌刺编成的头冠戴在他的头上。跪在仙人掌怪人面前的是四个肥胖的人质，他们的皮肤上有几个被刺过的细小红疹。“那么3V，你将尝试拯救他们，并与我决战，最后悲惨地败在我的手下。但是3V，你知道我为什么要劫持他们吗？”3V自灰尘之中一步步向仙人掌怪人靠近。“3V！你知道吗！太阳是一条毒蛇，人类是太阳的毒汁。在他们邪恶的眼睛里，所有的一切都是能量，而所有多余的能量都必须以某种方式被消耗掉，看看你脚下的这座，这座摩天广厦，它像一座迷宫，它存在的意义就是制造金钱，而金钱会制造更多的大厦，直到宇宙中的一切能量都变成大厦。所以我要阻止这一切，我把所有人类转换为仙人掌！仙人掌只储存液体，仙人掌会永远地延缓这恐怖耗散。只有这样，只有这样生命才会多拥有一点时间…”但是3V的拳头，带着尖啸的气流，打穿了仙人掌怪人的心脏，从仙人掌怪人的身体里喷溅出大量的黄汁，也许它们正散发着苦味。仙人掌怪人一边吐水一边大叫，“啊，3V，你休想知道我是哪位神明…”3V拖着仙人掌怪人的身体，带着他来到一座墙边，从仙人掌怪人的头顶，3V拔了两根刺，他拎起仙人掌怪人的袍，把他的手掌钉在了墙上，然后一拳一拳地击打仙人掌怪人的腹肚。见仙人掌怪人不肯开头，3V打碎了仙人掌怪人四肢的关节。慢慢地，濒死的仙人掌怪人顺着墙滑落下来。他开始变成一具女性之躯。白袍变成白裙，头上的尖刺之环生长出鲜花，变成一副花环。她是代表生长季的夏之女神奥克索。“3V，我就要死了……但是我将会告诉你一个秘密。所有的神都是你的父亲，所有的神都是你的母亲。你的不朽源于我们的神力，当你实现你的人类父亲卑鄙的意志，当那一天来临，你也会死去。你有想过死亡吗3V，你一定感觉不到吧，啊，看着我的眼睛，好好看着吧，3V，死亡来了，3V！”黄色的烟雾散去。在太阳光下，3V红色的眼睛让被救出的四位人质感到眩晕。又要骑上摩托了，又要去杀死什么下一个怪人。3V突然感到热，腰带上的风扇嗡嗡鸣响。他开始感到夏天再也不会过去。
