调整字体设置，并更新了主要内容

--- a/docs/records/01_1.md
+++ b/docs/records/01_1.md
@@ -1,6 +1,6 @@
 # 第一届，第一组
 
-!!! info "规则说明"
+??? info "规则说明"
 
     **要求**：主题是“长夏”，不能由AI辅助，小说300-1k字，诗歌八行以上。
 
@@ -8,7 +8,7 @@
 
     **keeper**: 树
 
-!!! note "参与者"
+??? note "参与者"
     鳄鱼 , 别人的电脑 , 缺翼 , sparkle , 企鹅侦探 , 朝菌 , 树 , 男酮文学bot , 祁晓卓 , Azad , 北欧毛虫
 
 
@@ -203,7 +203,7 @@ A的今日账单：
 
 车费：从警局去医院，-23.8
 
-&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;从医院回家，-15
+&emsp;&emsp;&emsp;从医院回家，-15
 
 伤药：-59.5
 
