--- a/docs/records/01_2.md
+++ b/docs/records/01_2.md
@@ -1,6 +1,6 @@
 # 第一届，第二组
 
-!!! info "规则说明"
+??? info "规则说明"
 
     **要求**：主题是“长夏”，不能由AI辅助，小说300-1k字，诗歌八行以上。
 
@@ -8,7 +8,7 @@
 
     **keeper**: 树
 
-!!! note "参与者"
+??? note "参与者"
     lumina , 睽违 , 湖2(雷克图) , 猫猫 , Einsamkeit , Taro_Z , Melon , 小虫 , 辰星凌 , 一阳来复
 
 
@@ -236,6 +236,3 @@
 ---
 
 假面骑士3V不会感觉热。这个时候要是有一双手触摸他的头盔，它一定会被烫得连连缩回手指。但他不会感到热。假面骑士3V的身体是戈德尔教授改造成的一具不朽之躯，他不会感到热。假面骑士3V现在要去杀死仙人掌怪人。骑着3V摩托，公路的风顺着他的皮衣呼啸而过。在那有着黄色烟雾笼罩的大厦，便是被仙人掌怪人支配的场所，在这片城市当中格外显眼。3V来到了大厦楼下，黄烟是从第七十三层冒出来的，从碎裂的玻璃中汹涌地上升。那里很高，而情况又那么紧急。但是3V的双腿是经过改造的，他蝗虫般地跃起，坚硬的深绿色头盔像一枚炮弹，击碎水泥和钢筋，从七十二层的碎砖当中坚硬地穿过，3V来到了仙人掌怪人的面前。“啊，你来了啊，3V！”仙人掌怪人穿着一件白纱似的长袍，他拥有绿色的光滑皮肤和遍布全身的尖刺，有一顶用仙人掌刺编成的头冠戴在他的头上。跪在仙人掌怪人面前的是四个肥胖的人质，他们的皮肤上有几个被刺过的细小红疹。“那么3V，你将尝试拯救他们，并与我决战，最后悲惨地败在我的手下。但是3V，你知道我为什么要劫持他们吗？”3V自灰尘之中一步步向仙人掌怪人靠近。“3V！你知道吗！太阳是一条毒蛇，人类是太阳的毒汁。在他们邪恶的眼睛里，所有的一切都是能量，而所有多余的能量都必须以某种方式被消耗掉，看看你脚下的这座，这座摩天广厦，它像一座迷宫，它存在的意义就是制造金钱，而金钱会制造更多的大厦，直到宇宙中的一切能量都变成大厦。所以我要阻止这一切，我把所有人类转换为仙人掌！仙人掌只储存液体，仙人掌会永远地延缓这恐怖耗散。只有这样，只有这样生命才会多拥有一点时间…”但是3V的拳头，带着尖啸的气流，打穿了仙人掌怪人的心脏，从仙人掌怪人的身体里喷溅出大量的黄汁，也许它们正散发着苦味。仙人掌怪人一边吐水一边大叫，“啊，3V，你休想知道我是哪位神明…”3V拖着仙人掌怪人的身体，带着他来到一座墙边，从仙人掌怪人的头顶，3V拔了两根刺，他拎起仙人掌怪人的袍，把他的手掌钉在了墙上，然后一拳一拳地击打仙人掌怪人的腹肚。见仙人掌怪人不肯开头，3V打碎了仙人掌怪人四肢的关节。慢慢地，濒死的仙人掌怪人顺着墙滑落下来。他开始变成一具女性之躯。白袍变成白裙，头上的尖刺之环生长出鲜花，变成一副花环。她是代表生长季的夏之女神奥克索。“3V，我就要死了……但是我将会告诉你一个秘密。所有的神都是你的父亲，所有的神都是你的母亲。你的不朽源于我们的神力，当你实现你的人类父亲卑鄙的意志，当那一天来临，你也会死去。你有想过死亡吗3V，你一定感觉不到吧，啊，看着我的眼睛，好好看着吧，3V，死亡来了，3V！”黄色的烟雾散去。在太阳光下，3V红色的眼睛让被救出的四位人质感到眩晕。又要骑上摩托了，又要去杀死什么下一个怪人。3V突然感到热，腰带上的风扇嗡嗡鸣响。他开始感到夏天再也不会过去。
-
-
-
