--- a/docs/records/02.md
+++ b/docs/records/02.md
@@ -1,6 +1,6 @@
 # 第二届
 
-!!! info "规则说明"
+??? info "规则说明"
 
     这次由各位参赛者为彼此提供主题。请提供意义足够明确的词汇（但是，多义词是允许的），并避开敏感的政治指向、露骨的黄色表达和其他会引起冲突的词汇。请善意地为其他人提供主题。最终决定权归属于主持人。
     
@@ -10,7 +10,7 @@
 
     **主持人**: 缺翼
 
-!!! note "参与者"
+??? note "参与者"
     Einsamkeit , 男酮文学作者 , 树 , Azad , 晨泊北岛 , 重
 
 
