--- a/docs/records/04_1.md
+++ b/docs/records/04_1.md
@@ -1,6 +1,6 @@
 # 第四届，第一组
 
-!!! info "规则说明"
+??? info "规则说明"
 
     **主题**：年兽 / 回环
 
@@ -20,13 +20,285 @@
     > Deepseek R1 横空出世，主持已经大受震撼。文学就要死了！总之，这次活动加入 deepseek 仿写，愿意接受仿写的参与者文本将附一份 deepseek 仿写文本参加。仿写文本一定放在与原文本相邻的地方，但你需要判断哪个是你的朋友，哪个是他的赛博嘴替  
     组内名单中，后加 `& DS` 的是参与 AI 模仿写作的。
 
-    **主持人**：树 (通俗文学bot)
+    **主持**：树 (通俗文学bot)
 
-!!! note "参与名单"
-    惊蛰∪跑团: Lumina, 一阳来复, 林别浪, 奉浦, 时居  
-    跑团\惊蛰: 自娱自乐, 魔法少女kl, 克瑞普托  
-    惊蛰\跑团: 缺翼, Azad  
-    查无此人: deepseek R1 model
+??? note "参与名单"
+
+    > 惊蛰 ∪ 跑团:&ensp;&ensp;Lumina, 一阳来复, 林别浪, 奉浦, 时居  
+    > 跑团 \ 惊蛰:&ensp;&ensp;&ensp;自娱自乐, 魔法少女kl, 克瑞普托  
+    > 惊蛰 \ 跑团:&ensp;&ensp;&ensp;缺翼, Azad  
+    > 查无此人:&ensp;&ensp;&ensp;&ensp;&ensp;`deepseek R1 model`
+
+    **第一组**
+
+    克瑞普托 & DS, 一阳来复 & DS, 自娱自乐, 林别浪, 缺翼 & DS
 
 
-// 等待更新
+## 1 <div class="covered-text">自娱自乐</div>
+---
+### 年
+
+金挂掉电话：“‘大蚊子’要来了！”
+
+金向银解释：“大蚊子”是爸爸年轻的时候最好的朋友，本名叫文，“大蚊子”是大家给他起的绰号。那时候，爸爸是乡里成绩最好的，文叔叔是乡里成绩最差的，所以老师把爸爸和文叔叔安排做了同桌。于是爸爸和文叔叔天天下河摸鱼上树掏鸟，就成了最好的朋友。刚才文叔叔打电话来，说他也进了城，要来给我们拜年了。
+
+银对陌生人的来访不感兴趣。家里刚刚买了电脑，银正沉迷于火遍全国网吧的《红色警戒2》。
+
+大年初一，“大蚊子”果然带着老婆孩子来拜年了。他的衣服是新的，但是看不出牌子；拎着一袋吃的，也看不出牌子。银对这个陌生人的兴趣也就到此为止了。“快叫文叔叔。”“文叔叔过年好。”银应付着。“快叫金叔叔。”“金叔叔过年好！”“小蚊子”——“大蚊子”的儿子当然应该叫“小蚊子”，银心想——喊得很大声，也许“大蚊子”事先训练过他吧。“玩电脑吗？”刚尽完小孩子应尽的义务，银就把“小蚊子”带进了书房。他们都对成年人那套互相给对方的小孩塞红包的等价交换游戏毫无兴趣，因为收到的所有红包都必须上交。
+
+这是“小蚊子”第一次接触电脑。两个人一台电脑当然玩不了《红色警戒2》，但是可以玩《拳皇》。虐菜固然很爽，但是大呼小叫也让银感到口渴。银离开书房，去厨房倒水，但在客厅被母亲叫住了。“你爸爸在和文叔叔谈事情，不要过去，就在前面玩吧。”在客厅和餐厅之间有一个小回廊，一扇门将套间分成均匀的两半。“前面”是一家人的生活空间，“后面”则是厨房、厕所、浴室等等一切需要与卧室隔离开的，不是会产生大量垃圾就是会产生大量水汽，再要么就两者皆是的地方。金对这样的户型非常满意。银看了看静静关着的门，回了书房——渴就渴点吧，游戏要紧。
+
+这便是“大蚊子”的初次来访。当那扇隔绝“前后”的门终于打开的时候，“大蚊子”便带着家人告辞了。告别时，一番请客人留下来吃午饭的挽留表演自然是少不了的。银厌恶这种客套，它减少了他和“小蚊子”的游戏时间。更糟糕的是，它提供了一种虚假的希望：如果“大蚊子”真的能留下来吃午饭，那么银就可以和“小蚊子”多玩很久——但那不可能。
+
+此后“大蚊子”每年都会来拜年。有时候会带着“小蚊子”一起来，有时候不会，对于银来说，这让过年变成了一次有些刺激的摸奖。有时，虽然并非过年，但“大蚊子”还是会来，不过这种时候他都是一个人，而且总是穿着一模一样的衣服，就像游戏里永远不变的NPC。奇怪的是，不管是不是过年，每次“大蚊子”来，金都会和他到“后面”“谈事情”，紧闭的门扇打开之后，往往还会吐出满肚子的烟雾——银最讨厌的东西。银最讨厌有人在家里抽烟，正常情况下，金从不在家里抽烟。银喜欢“小蚊子”。如果说银对“大蚊子”的近况有什么了解的话，那也只是听“小蚊子”说的。“大蚊子”是一名泥瓦匠，进了城这个职业就叫做“装修工人”。“大蚊子”带着一群泥瓦匠到处“包工程”。这就是银对“大蚊子”的全部了解。
+
+“大蚊子”最后一次来拜年的时候，银已经不玩游戏了。准确地说，他的兴趣从人造的游戏转移到了上帝造的游戏——他开始研究人类社会。人造的规则总有种种缺陷，因而没有哪个游戏能做到尽善尽美，所以为什么不玩上帝做的游戏呢？银读了很多书，从原始人的巫术到证券投资市场。这次，很幸运，“小蚊子”也来了。他仍然盼望着玩银的电脑。于是银把书桌让给了他，一边看“小蚊子”操作，一边闲聊。“你知道‘年兽’的历史也就大概八十年吗？我来给你读一段。这是孙玉声的集子，民国的老本子，这段是1933年的：‘其有悬紫微星画轴者，画家每绘一石柱，柱上锁一似狗非狗之兽，或云是兽即天狗星，或云是兽名年，常欲食人，紫微星故锁系之，不令至下界肆恶，而使人不逢年患，故过年时悬此最宜。然腹俭如余，殊不知此典出处，且愧无从考证也。’这段讲得更清楚点，这段是1935年的：‘忆幼尝闻诸父老言，年恶兽也，其形似狮非狮，似狗非狗，专喜夜出食人，画家绘紫微星，柱上所锁之兽，即系此物。以是迷信之人，每有于新岁间悬之中堂，以为禳解者，此一说也。虽不见经传，无从考证，或有为齐东野人之言，然年为恶兽，以迩日之社会观之，颇为近似。盖穷人之视年关，恒有生命危险之虞，其慄慄畏惧，有甚于猛兽当前，几乎不膏其血吻者。是则安得有紫微星其人，为之执缚此兽，或竟扑杀之，以为民除此大患，使人人得安度残冬，相率共游乎熙皞之天耶？’同一个人，在同一份报纸上，仅仅只是隔了两年，便发表了几乎一样的话题……你有在听吗？”
+
+直到那扇门打开，“大蚊子”告别的时候，银才注意到他穿着一套西服。银还拿到了“大蚊子”新印的名片，上面写着“大蚊子”的姓名和联系电话，还有“室内设计”的字样。
+
+之后，银就再也没见过“大蚊子”了。更没见过“小蚊子”。再后来啊，银成年了，又经历了疫情。银很想加入这场上帝的游戏，就像他的父亲金一样；但是金让他好好读书，拿到学位以后再想生意的事。
+
+忽然有一年，金挂掉手机：“‘大蚊子’要来了！”金对银说：“还记得你小时候老来拜年的文叔叔吗？今年他要来拜年了！”
+
+银很高兴。但不幸的是，他除夕夜睡过头了。倒不是因为“守岁”，只是单纯玩手机玩太久了。短视频的诱惑力比游戏大多了。银一直睡到午饭时间才醒来，“大蚊子”想必早就拜完年回去了。如果“小蚊子”也来了，那银也是没机会见到他的。
+
+银穿好衣服走出卧室，发现金在客厅里来回踱步。“大蚊子”并没有来。金对儿子发起了牢骚：“我就不要他还钱，我本来就准备今天当着他的面把欠条给他。多少年不还了，肯定还不上了。但是你不能打电话说要来，结果你不来！这算什么？这是失约！这么些年你玩失踪就算了，现在特意来打个电话，逗我玩么？而且，当年我刚刚进城，不也欠了一屁股债吗？我一个人打拼这么多年，还不上钱就再去借新债还旧债，从来没有失过约！最后我不还是把所有债全还清了么？……”
+
+茶几上没有年货，盘子里孤零零地躺着一张纸条，上面写着“今借到……贰拾萬圆整……年利率20%……”云云。在“大蚊子”的签名和指印下面，密密麻麻地记录着每一笔还款与每一年的利息。“大蚊子”总共还了六十万，还剩十二万没还。这十二万到今年已经翻成三十五万还多了。
+
+“也许他除夕夜被年兽吃掉了吧。”
+
+<br/>
+
+
+## 2 <div class="covered-text">缺翼 DS</div>
+---
+### 年兽的莫比乌斯除夕
+
+按照镇志编纂办（我对他们的工作态度向来存疑，尤其是发现他们将"驱逐年兽的必备物资清单"与"镇长三姨太的嫁妆单"装订反了之后）的官方记载，本镇连续四十九年成功驱逐年兽的记录源于对传统的绝对忠诚——"每至腊月廿三，必以九十九挂浏阳鞭炮、三百六十五盏红灯笼、十八名童男童女的歌声震慑邪祟"。事实上，去年腊月廿九，我在档案馆翻到捆爆竹的麻绳时，意外扯出了1913年的《除夕执勤表》，上面赫然写着"九十九挂浏阳鞭炮、三百六十五盏红灯笼、十八名童男童女"。
+
+"这是时间蛀虫的恶作剧。"管理员如是说，顺手往我茶里加了勺墙灰。
+
+后来的故事各位都听过：游方道士玄青子途经本镇，发现年兽被困在时间回廊，遂以桃木剑斩断循环，解救苍生。但若您真信了茶馆说书人的版本，烦请将本书放回原位——隔壁《母猪产后护理大全》或许更适合您。
+
+作为本镇唯一连续四十九年担任"爆竹统筹员"的倒霉蛋，我有义务揭示某些被朱砂涂抹的真相。事情始于民国三年冬，当我在老钟表匠遗物中发现那本《黄历推背图》时，封皮内侧用簪花小楷写着："子时焚此书，可见真章。"
+
+我照做了。火光中浮现的却不是卦象，而是镇长父亲迎娶第六房妾室那天的流水席菜单。
+
+直到第十次焚烧，泛黄的纸页才显出一行血字："年食其尾，轮回不止。"
+
+次日我去查看镇口那尊缺了左耳的年兽石雕，青苔覆盖的底座刻着相同的谶语。石匠赵驼子醉醺醺地倚在旁边，怀里抱着半坛女儿红："这畜生当年啃掉自己耳朵下酒咧......"
+
+最离奇的是当晚，我在库房清点红绸时撞见偷灯油的耗子排成北斗七星。它们抬着片青铜鳞甲，上面布满螺旋状纹路——与我祖父那支停摆的怀表机芯惊人相似。
+
+真正的转折发生在腊月廿八。外乡来的女学生林眠秋非要参观"驱邪主炮"，这个穿着洋装的姑娘盯着我们引以为傲的万响雷光炮，突然笑出声："你们在给钟表上发条呢。"
+
+她掏出自制的气压计，指针在炮竹堆里疯狂旋转。"声波形成闭合驻波，看这完美的正弦曲线——你们每年都在给某个莫比乌斯环泵入能量。"
+
+没等我抄起扫帚赶人，镇长公子带着他的镀金怀表出现。这个宣称"时间就是金钱"的留洋派，此刻表盘上的指针正在逆跳。"林小姐说得对，"他的怀表盖内侧嵌着半枚青铜鳞，"从物理学角度......"
+
+"从玄学角度来说，"我强行打断，"年兽戌时现形，亥时猖獗，子时遁走。五十年来分秒不差。"
+
+"因为它是齿轮上的仓鼠。"林眠秋掀开万响炮底座的石板。积灰的凹槽里，十三片逆时针旋转的青铜鳞甲正在啃食自己的影子。
+
+我们僵持到子夜，年兽如期从镇碑裂隙钻出。但这回它没扑向牲口棚，而是径直冲向林眠秋。月光照亮它脖颈的伤痕——与石雕缺耳处完全吻合。
+
+"停下！"镇长公子举起怀表，鳞甲与年兽伤口共振出青铜颤音。巨兽痛苦地蜷缩成环状，獠牙咬住自己尾尖，形成一个完美的圆。
+
+林眠秋突然夺过我手中的火折子，却不是点燃爆竹。她将火焰贴近年兽的眼瞳，在那对琥珀色球体里，我们看到了四十九个重叠的除夕夜——每个场景都有镇民在石板凹槽更换新的青铜鳞。
+
+"逆熵装置。"她的声音发颤，"有人把年兽改造成活体钟摆，用恐惧维系时间循环。"
+
+当第一缕晨光刺破雾霭时，我们终于拼凑出真相：1900年的镇长私吞赈灾银，为掩盖饥荒真相，勾结方士将年兽禁锢在时间牢笼。每片青铜鳞都是契约的楔子，镇民越恐惧，齿轮转得越欢实。
+
+破晓时分，林眠秋将万响炮改造成次声波发射器，镇长公子贡献出祖传怀表里的鳞片密钥。当年兽咬断自己第七根脊椎骨时，全镇的爆竹同时哑火，红灯笼成串熄灭。
+
+没有预想中的末日景象。晨雾散尽后，镇碑上浮现出1900年饿殍的掌印，那些被轮回抹杀的生命正从裂缝里渗出星光。年兽化作青铜日晷，永远停在辰时三刻——镇长父亲纳妾的吉时。
+
+如今茶馆说书人仍在传唱玄青子的神话，但我知道，真正的英雄是那个带着气压计和次声波图纸离开的姑娘。哦对了，她现在应该叫林教授——我在最新一期《自然》杂志看到篇论文：《东亚民俗活动中的拓扑时间结构实证研究》，配图是镇长公子那块停转的怀表。
+
+有时候我会抚摸年兽日晷上的齿痕，猜想那些被吞噬的时间究竟去了哪里。直到上周整理旧档，发现1913年执勤表背面的油渍，形状恰似一只咬住尾巴的兽。
+
+<br/>
+
+
+## 3 <div class="covered-text">缺翼</div>
+---
+### 年兽猎手
+
+&emsp;&emsp;我的姐姐姓陈，就和我一样，我总是和别人这样说。她个子比我高这么多，头发垂下来的时候到这里（或者再高一点，我记不清）。她比我大，大很多，有一次我走进侧屋，发现她在看英语书。那个时候我只会很少很少一点的英语，我就问姐姐她在看什么。“一本故事书哦，”她说，“英语的，你是不是还看不懂？等我读完，晚上的时候讲给你听。”侧屋有一张床，姥姥在上面盖了张塑料膜。侧屋还有一辆脏兮兮的电动车，一个矮木柜子，一个高木柜子，好几张椅子。还有一块也许是捣蒜用的石头，上面的凹槽里积了不少水，我一直没搞清楚叫什么（比桌子还要重）。它之前一直摆在院子里，后来被姥姥收起来了，就摆在这里。高的木柜子就是书柜，里面的书摸起来黏糊糊的。我从上找到下，再从下找到上，从来没有找到过那本英文的小说。也许姐姐把书带到她的学校里去了，我不知道。她后来也忘记了向我讲故事，等我下次见到她一定要好好问问。
+
+&emsp;&emsp;姐姐下一次什么时候回来？我也会问别人。她当时站在村口那块，就前头那座桥的桥头。舅舅马上就会开车接她走，然后她就要去外地上学。“外地”是哪里，我一直不记得。如果她比我大七八岁，那应该是去上高中。如果她比我大十岁，那就是去上大学去了。她站在那里向我招手，一下、一下、一下。“哎——”她喊道，“干嘛呢——？回屋找你姥姥去——！我走了——”我就回去了，姥姥还在添柴火，锅里煮的是疙瘩汤，上面是黄不拉几的馒头（而且蒸的黏黏糊糊，我从来不喜欢拿着吃）。柴火有点潮，闻起来臭乎乎的，在火里面噼啪作响。我盯着看，看得眼睛难受。再后来我就出来，踮着脚躲开好几滩鸡屎，狗小步地跑出大门，等我跟着出去时姐姐已经走了。只有公鸡还在大声嚷嚷。于是我跑过去追公鸡，可惜公鸡总是跑得比我快。爷爷在门口冲着我喊，让我不要折腾邻家的鸡。我没有回屋，就顺着河边走，河当时差不多已经干了，看起来更像是一道很深的土沟。堂哥胆子大，他总是拽着灌木走到河床地下，过年的时候就往桥洞底下扔炮仗。有一次土太松了，他跌下去摔了膝盖，大姨一直坐在床边上骂。
+
+&emsp;&emsp;我觉得他早就忘记这些事情了。因为后来他仍然到处跑，往桥洞底下扔炮仗，往邻居的鸡身上扔炮仗，有一次往我的棉袄上扔炮仗。“吓不死你！哈哈哈哈哈……”他拍着我说。我问他姐姐在哪里。但是他没有心思听。妈妈拽着他的胳膊在医院里走（虽然他已经二十了），当时他在南京做手术。我忘记是哪家医院了，名字肯定很长。堂哥小时候脖子被开水烫了，妈妈说大姨逞强要用偏方，结果留下了一大片疮疤。疮疤就像粘在他脖子上的一滩泡泡糖，但是是肉的。他说夏天会痒，我不知道是什么样的感觉。医生把他的疮疤切掉了，但是还是留下了一片红红的痕迹，就像是你把水壶从桌子的软玻璃上拿走时留下的那种痕迹。堂哥还是喜欢高领的衣服，这个习惯一直没有改。堂哥说他高中学了俄语，我觉得他应该也没看过那本英文的故事书。他大学学英语很吃力，好在还是学会了。姐姐是什么时候学了英语？我不记得了。
+
+&emsp;&emsp;有一年老姥姥去世了。不是冬天和春天的时候。老姥姥是姥姥的妈妈，或者是妈妈的姥姥，她告诉我要这么叫老姥姥。老——姥姥，老姥姥。老姥姥总是愣着神，妈妈提着她的手问她冷不冷。老姥姥去世的时候妈妈请假回去了，当时我上高中（还是大学？）。我没有回去，没有。那间屋子很旧，墙有一半是用土堆起来的，门和墙壁之间有一条很大的裂缝。老姥姥住在里屋，院子里之前还有两只鸡（所以当时总是要踮起脚避开烦人的鸡屎）。里屋总是有点黑，没有窗户。妈妈让老姥姥身体好的时候出去走走（还是劝她好好在床上休息来着？）。老姥姥有一次把食物放坏了，还是犟着不想扔，被妈妈说了一顿。她的筷子有点发霉，妈妈担心，就让我和堂哥给她换了一双。春节的时候我们要给老姥姥拜年，穿过那座桥，沿着全是土的水泥路往前走，然后拐弯进一条坑坑洼洼的土路（全是车辙印子，里面积着脏兮兮的水），穿过两间新房子之间的窄巷，然后是老姥姥的屋子。要是从前边绕过去，再往湖边走，能看到小卖部。一盒炮仗买五块（或者别的价格），总是堂哥过去买。他递给我一盒，然后擦着两颗，一颗直接扔进湖里（炸出乳白色的、我一直觉得不太干净的浪花），另一个用来吓大鹅。然后我们就往家里走，等到晚上放烟花（耳朵边总是已经开始噼里啪啦，白天放烟花到底有什么好看头？）。除了烟花还有好些别的，像是那种点着了就到处呲火星子的金属棒，还有会在地上边响边旋转的玩意儿。（堂哥说可以飞上天，但是他一直没有成功过。有一天我们发现以前总是摆颠倒了——谁叫它把字和标签写在那一面上的！）后半夜他和舅舅还在放烟花，我已经困了。晚上有点冷，但是我很喜欢。风吹得脑袋清清爽爽。屋子沿着外边的石头楼梯能走到第二层的露天台子，上边的栏杆总是太矮。栏杆外面是不知谁家的田垄，塑料膜在月亮下亮晶晶的，但是台子太高了，我看的心里发怵，总怕自己掉下去。所幸后来的好多年里我从来没有掉下去过。之后我就坐在水泥台子上，台子下面垒着许多砖头。台子上面留着一串爪印，不知道是哪条狗的。——不过我肯定不认识它。屋子在我出生前就建好了，比那早得多。小时候据说有一条黑色的狗，大到我可以骑在上面。有一天它吃了路上的东西，被药死了。后来爷爷只养过黄色的田园犬。有时候一只，有时候养两只。黄色的小狗低着头钻进餐桌地下，我夹了两块红烧肉，咬一口，然后扔到地上。它低着头转过来，用舌头刮蹭过地砖，把肉块吞进嘴里。我伸出头摸它的后背，被它轻轻地躲开了。
+
+&emsp;&emsp;有一年我发现狗的眼睛瞎了。是哪一只狗？黄色的，小小的，我想大概是一只田园犬。那年我正上高中（或者刚进入大学，差不太多）。狗蹲在院子里，舅舅扛着梯子经过，给院子里的柿子树剪枝。下午我一根一根地检查了每一根树枝。有长的树枝和短的树枝，弯曲的和分叉的。但是没有我一直一直想要的那种，要非常非常直，不能太沉重也不应该太脆弱，没有枝杈也没有倒刺，而且不能握起来湿漉漉黏糊糊，我就能把它当作一把剑，然后高高地举起来，插进棉袄和里面的背心之间，刚好卡在那里（姥姥大声地说：“棉袄，棉袄脏了！”），冬天的风清清爽爽吹过来，我就抱着手臂站在石头楼梯上面，那些拉屎的鸡和吵吵嚷嚷的鹅都会闻风丧胆。黄色的狗趟过一条我用来尿尿的排水渠，看也没看我一眼，就用鼻子拱开纱门，跑进客厅里去。再之后是我的堂哥。就像很久以前一样，我用剑指着他说：“邪恶的黑龙，我可是伟大的蓝色的龙的末裔。就像预言说的那样，现在我将要消灭你——”预言正是我说的。我们约定好了，我是蓝色的，和我的外套一样，蓝色就是最最好的，而他则是邪恶的漆黑的颜色。最后他说：“我的吐息已经打败了你！这是我学习的最最厉害的招式，你已经完全死掉了。”我说：“不，我还活着，我会更厉害的技能，比你的还厉害。你的吐息现在被我反弹了。”他说：“我也会，我也把它反弹了。你还是输了。”后来我开始追逐他，但是我从来追不上我的堂哥。他一直在那里生活，总是知道每一家每一户的位置。而我永远不记得小卖部在哪里。我从来、从来都没有学会像他那样把炮仗攥在手心，一下就在砂纸上擦出火花，然后远远地抛进桥洞里。最后我们一起在田垄边上走，去看他的老同学，也没怎么说话。他点起一支烟，伸直了两根手指夹住，然后吸进肺里。他把打火机在手上转了一圈，收进兜里，然后别过头吐气。另一次他骑着电动三轮车，水泥路没有想象中那么平整，我紧紧地抓住座椅，他只是拧住把手，一刻不停。我想我从来不认识他的同学、他的朋友，但是我的堂哥还是带着我过去了。他们走进里屋，开始玩王者荣耀或者和平精英，我坐在客厅的沙发上，面前的塑料小盆里混着瓜子和杂牌子的薄荷糖。我吃了好几颗，塑料的包装就揣在口袋里。别人家的狗在别人家的干净瓷砖上啪嗒啪嗒地跑走了，他们家没有鸡和鸡的白色或者褐色的粪便。有一道画着彩绘的墙隔在门口，我到最后也没弄明白是做什么的，狗又从墙后头窜出来，仍然没有理睬我。那幅画真的不怎么好看，真的。后来堂哥走了出来，在我手里塞了两条巧克力，对着我笑了笑。巧克力也是不知名的一个牌子的，打开的时候已经融化了。融化的巧克力黏糊糊的，我讨厌把它粘到手上。但是，巧克力总是很好吃的。
+
+&emsp;&emsp;很早的时候，河里还有些水，春天的时候河边也会长许多蘑菇。白色的蘑菇是能吃的，不过我也没见过其他样子的蘑菇。快到夏天的时候会有槐花饼和槐花饭，我尝不出甜味。平常的时候总是豆芽的包子和猪肉的包子，面疙瘩的白粥，咸得要命的炒菜。总是没有足够甜的硬糖，我宁愿去小卖部要两瓶汽水喝，再闲逛着走回来（经过一面刷着“中国移动就是快，全屋……”的墙）。这种时候总会听见叫四声的鸟：“咕——咕——咕——咕——”，我当时觉得那是布谷。鸟从来不落在水泥路上，只有不知道谁家的鸡到处乱走（如果不把鸡算进那些鸟里面的话）。再往前走是那座桥，桥下的河里已经没有水了。桥的另一头是爷爷的屋子。妈妈、大姨和姥姥都在客厅里。“记得吗？”妈妈问，“王正的同学来了，有你的卜令捷姐姐。小时候你可喜欢了，有一次她带一条小黑狗来，你们俩不知道商量了啥突然给扔到水缸里去了……”我只是回答说：“嗯。”楼上许多陌生人围着桌子在聊天，我让堂哥帮我抓了一把瓜子和杂牌子的薄荷糖，塞进口袋里，然后走到外面的平台上，绕过黑乎乎的烟囱，沿着石头台阶走到院子里。姥姥已经把院子扫得干干净净，不过她不养鸡之后，地上也只有被风吹过来的尘土。这里的尘土真的很多，远远的天空也是黄蒙蒙，小麦还只有矮矮的一点，黄色的或者是青色的，我就在河边一直走，我知道走到尽头就是一条公路，上公路前的斜坡又长又颠簸，往前一些距离是一片废弃的厂房（漆成蓝色的墙，一行白色的广告词），然后是猪圈、一排菜棚、两个远方亲戚的家、一个生锈铁门锁住的菜园、一栋新屋子、一条岔路，爷爷的家。我沿着那条路一直向前走，就像很多年以前一样，一直走——一直走，突然车喇叭滴滴地从身后响起，我回头看，一辆五菱的面包车嗖地从面前驶过，尘土飞扬。当时我手上抓着一盒炮仗，边走边扔，“啪！”“啪！”舅舅的车就在那些响声中开远了。
+
+&emsp;&emsp;其实王正是大姨的儿子，我是不是本来应该喊他表哥？或者我其实没有喊错。我不知道。后来有一次我问起这件事，我对他说：“你还记得我的姐姐吗？”我还向其他很多人问过这件事。他们都不知道。小时候表哥想吓唬我，半夜里和我讲年兽的故事。我已经在幼儿园听过那个故事了。年兽是一种很胆小很怯懦的生物，有一年春天大家一起贴对联点灯火，在爆竹声里它吓得转头就跑，逃啊逃啊逃到没有人知道也没有人能够找到的地方躲起来死掉了。也许很久很久以前的那一天我不应该点着擦炮，它的响声实在太吵太吵，烟尘里我捂住眼睛和鼻子，透过手指缝向外看，舅舅的红色车灯逐渐远去，烟花在黑色的平静的夜空中越来越鲜艳，薄荷糖在喉咙里慢慢化开。
+
+<br/>
+
+
+## 4 <div class="covered-text">林别浪</div>
+---
+### 《媚/腓》
+
+年老的夫人身边有一位妓女。  
+妓女身材匀称，鱼骨胸衣包裹着她纤细的腰和挺翘的臀，她的大腿雪白而丰腴，柔软的肉摊在丝绒被上。  
+老贵妇坐在床的一侧，把手深入妓女的腿间拨弄，妓女呻吟着，声音婉转，音色也很奇特，仿若少女，但也好似年轻的阉伶，听起来像是某种高雅的音乐。连体胸衣短短的下摆配合着妓女夹紧的腿，将那隐秘的欢愉遮得严严实实，但夫人的手就像插入湖面般，在她的肉腿上搅出波澜。  
+贵妇的身边是她嬉笑的年轻的女儿们，她们自然没有与妓女在同一侧，她们也许在看，也许在听，也许只是在相互玩闹。  
+纱幔被高高挂起，宛若一个小小的塔尖。  
+她们的衣着和裸露的肌肤，质感就像油画一样，或者是镜头的问题。  
+终于，为了迎合观众的期盼，妓女夹着的腿张开了。  
+那是一团皱缩的、灰黑色的、腐臭的肉。  
+妓女还在发出欢愉的呻吟。  
+大概是知道观众不喜欢看这个吧，她又把腿加上了。  
+
+贵妇有一瓶毒药，正是它导致了车祸。一家人坐着的汽车失控，侧翻入深且茂密的山沟之中。  
+也许他们是前往山庄，也许他们正在下山，没人知道公爵打算带着家人做什么。  
+或者他是中毒之后一时兴起，想试试这刚被发明不久的交通工具，否则没人能解释为何他亲自开车。  
+自此，那段山路便被亡魂诅咒，一辆又一辆汽车冲破护栏，掉下山崖，这种情况持续了百年之久。  
+那瓶毒药的配方也已经失传，流传至今的也只有它的名字——“媚”，或者被意译做“腓”。（提出第二种意译的是本片的导演或者编剧，二位都没有出镜。）  
+还有唯一一个未被确定的配方，黑色曼陀罗花。  
+当然，如果有人愿意，穿过密林，顶着危险，去寻找沉在谷底的最初的汽车残骸，也许会发现，在几具骷髅中，有一个完好无损的玻璃瓶。它在摔落之际，因为繁复的布料和柔软的身体，还有一场晴日突发的大雨，得以安谧地躺到今天。  
+它曾经是鲜艳的绿色，绽放在粉红的绸缎之间。  
+不过许多成分也检测不出了。  
+
+<br/>
+
+
+## 5 <div class="covered-text">克瑞普托 DS</div>
+---
+
+玄关感应灯亮起的瞬间，悠真闻到白檀香混着热牛奶的气息。他脱掉沾雪的羊绒大衣，看见厨房玻璃映出晃动的暖光。葵系着红色围裙的背影正在流理台前忙碌，发梢扫过锁骨处的玫瑰刺青——那是去年夏天他们去镰仓看海时留下的印记。
+
+"不是说好等我订寿司吗？"悠真把公文包搁在玄关柜上，黑色西装裤腿还沾着六本木塔楼外的碎雪。落地窗外，东京铁塔在平安夜的初雪中明灭，像支插在奶油蛋糕上的蜡烛。
+
+葵转身时耳坠晃出碎金，手术刀般精准切开凝滞的空气："冰箱里有你爱喝的梅酒。"她说话时睫毛在眼下投出扇形阴影，与十八岁那年在天台递给他便当盒的姿态如出一辙。那时她刚考上医学部，白大褂口袋里总揣着解剖学笔记，却会记得往弟弟的午餐里塞满玉子烧。
+
+悠真解开袖扣往中岛台走去，大理石台面凝着冰镇酒瓶的水珠。当他伸手去取玻璃杯时，葵忽然握住他的手腕。医用消毒水气味从她指间漫上来，混着厨房里味噌汤的雾气，在他皮肤上烙下看不见的印记。
+
+"并购案还顺利吗？"她指尖划过他腕表边缘，金属表带在顶灯下泛起冷光。上个月庆应校友会上，三菱日联的部长拍着他肩膀说"不愧是早稻田的并购鬼才"，当时他正盯着手机里葵发来的晚餐照片——荞麦面在漆盒里摆成富士山形状，背景是姐夫未拆封的生日礼物。
+
+悠真转动酒杯，琥珀色液体映出自己领带上的暗纹。这个月他让三家医疗器械公司股价暴跌，此刻却答不出姐姐随口的问题。落地窗映出两人重叠的轮廓，葵的羊毛裙摆扫过他西裤折线，像初春的樱枝掠过神社石阶。
+
+"当心烫。"葵把味噌汤碗推过来时，无名指婚戒撞在瓷碗上发出清响。悠真突然想起上周在银座包厢，客户带来的陪酒女郎把冰球含在嘴里去吻他的威士忌杯。当时他盯着女孩后颈的玫瑰刺青，想起的却是手术刀切开皮肤的寒光。
+
+晚餐后葵在洗碗机前弯腰整理餐具，腰线在毛衣下起伏如未写完的和歌。悠真站在圣诞树旁调试彩灯，电线缠绕指尖的触感让他想起高中修学旅行时，葵在京都旅馆教他打太鼓结。那年岚山红叶正盛，她浴衣领口露出的后颈比月光更皎洁。
+
+"围巾歪了。"葵不知何时来到身后，带着柑橘护手霜的气息。她手指穿过悠真后颈发梢时，客厅智能音箱正播放《平安夜》钢琴版。落地窗外的飘雪突然变得密集，像是要掩埋整个港区的霓虹。
+
+悠真在眩晕中抓住圣诞树支架，彩灯串突然熄灭。黑暗中他听见葵的呼吸近在耳畔，比当年他们在镰仓海岸看的烟火更灼人。手机在西装内袋震动，不用看也知道是秘书发来的并购对象最新财报——那家关西制药公司最大的股东，正是姐夫任职的住友商事。
+
+<br/>
+
+
+## 6 <div class="covered-text">克瑞普托</div>
+---
+
+我拉开内室的门，屋内炭火旺盛，温暖如春。绫姊卧在榻上，三两侍女围着她。奶妈抱着孩子在屋内一角，背对着门。绫姊见到我，在侍女的搀扶下勉力撑起上身，一如既往笑得温和：“快过来，虎儿，瞧瞧你的外甥。”
+
+见我进来，一旁的侍女连忙拉上门，正值隆冬，北国的雪狂野暴躁，不可令其入内侵扰贵人玉体，更别提经产妇。我脸上笑容不变，大步向床边走去。方才在前殿见了房景叔父和政景，一路沾染的冷意已经褪去，不用担心传到绫姊身上。侍女们见我过来，如群花败谢般悄然散去，退至角落，那繁复的衣着亦融入画壁之中。我跪在榻边，绫姊重新躺下，费力地伸出手，我双手握住她。
+
+她神色虚弱，嘴唇苍白，但因着初为人母的欣喜，双颊泛起突兀的红。奶妈跪在另一侧，怀里抱着刚诞生几日的婴儿。绫姊招呼我来看，我抬眼望去，那孩子卧在金丝棉被中，脸皱成一团，胎毛细细地贴在额上，眼睛尚未睁开，与前些日见过的小马驹无甚差异。我实在无法找出他与政景或绫姊半分相似之处，眉头微皱，但嘴角从未放下。这副似笑非笑的模样曾吓跑不少侍从和家臣，却无法赶走绫姊，现在也无法撼动她的儿子，即使他们长得一点都不像。绫姊彷佛看穿我心中所想，柔声解释道：“婴儿都是这样的，你刚生下来时，也皱巴巴像猴子一般。”
+
+“这样吗？”
+
+“那当然了！你看，其实他鼻子和嘴巴像我，眼睛有点像政景。哎呀，这可不好，学他父亲的呆鱼眼睛！”她说完便笑了。但这种夫妻间的情趣、主家的玩笑，下人可不敢随意附和。我神情有所软化，紧紧握着她的手，掌心温热有余，在我手指触及不了的地方，仍如雪水般凉。我呵道：“加炭去！”侍女迫不及待，鱼贯而出。残花们一边羡慕，一边祈祷自己的命运。
+
+我重新看向绫姊：“政景虽不如我俊俏，战场上倒勇武过人，统率得当，亦有以一敌十之力。”我真情实感地夸赞，语气却像打趣，逗得绫姊以袖捂面，眉眼弯如新月。好一会儿，她放下手，认真地说：“这越后哪有比虎儿更勇猛之人。不仅如此，我听闻，那甲斐的晴信公亦败于阵下。”
+
+她动动手指，指使我靠近些，我不明其意却顺从照做。绫姊捡起我散落的发梢，顺延向上，抚着我的脸道：“战场九死一生，你我皆为武家儿女，此等命运无法避免，但仍该珍惜己身！”她皱了皱眉，又看了一眼婴儿，“你可有心仪之人？纵使不娶正室，子嗣一事……”
+
+她忧郁地望着我，眼眸如深不见底的潭水。我只有些惊讶，收回手来，正襟危坐：“绫姊，你在说什么呢？”
+
+她的眼神更惆怅了，充满我无法理解的情绪。良久才开口道：“你还喝酒吗？”
+
+我更不明所以，只笑答：“当然了，只是比起那些润喉之物，还是在林泉寺时，绫姊送来的酒最美味。”
+
+她又意味深长，而虚弱不已地微笑：“听说你在马上也要饮酒呢！我又寻来两瓶珍藏，你且拿去，别因此输了气势。”
+
+我自然笑纳，略略后退两步，俯下身来，贴上她微凉的脸，如儿时一般。绫姊微微抬手抚着我的头：“武田的野心，连我都有所耳闻。虎儿，你是我的妹妹、毗沙门天化身、越后守护，也将成为关东的管领。”我惊得抬头，直直撞上她的视线，她的眼睛亮得吓人。“你是生来安定天下之人，那便去吧！我只愿与幼子在此为你祈福。”
+
+“绫姊，我定会平安归来。”我又将脸颊窝在她的颈窝处，透过薄透的皮肤，血液有力地跃动，正如绫姊坚定的目光，令我不禁想起她背着父母，甩开下女，抱着酒坛，独自寻来林泉寺的时光。我轻轻叹了口气，起身垂眸，绫姊已闭上眼，乳母也退至一旁。
+
+我跨步出殿，指使候在门外的侍女进去。风雪与寒意再次笼罩于身，即使又过一年，此间亦是不变的白。站在走廊上，我不禁向外望去。
+
+想来，待煦风拂过春日山，又能见到那个男人吧。那与北国格格不入，令赤焰燃于川中岛之人。
+
+<br/>
+
+
+## 7 <div class="covered-text">一阳来复</div>
+---
+
+![文章截图0](https://rhett-c.github.io/awakening/others/04_1_7_article/0.jpg)
+![文章截图1](https://rhett-c.github.io/awakening/others/04_1_7_article/1.jpg)
+![文章截图2](https://rhett-c.github.io/awakening/others/04_1_7_article/2.jpg)
+![文章截图3](https://rhett-c.github.io/awakening/others/04_1_7_article/3.jpg)
+![文章截图4](https://rhett-c.github.io/awakening/others/04_1_7_article/4.jpg)
+![文章截图5](https://rhett-c.github.io/awakening/others/04_1_7_article/5.jpg)
+
+<br/>
+
+
+## 8 <div class="covered-text">一阳来复 DS</div>
+---
+
+### 一封未发送的短信草稿
+
+姐：
+
+如果你看到这条消息，请立即联系居委会张叔（他的电话我写在冰箱贴下面）。务必告诉他今晚千万不要安排人放鞭炮，尤其别让巡逻队靠近七号楼天台。
+
+还有，别让妈去找那个穿红棉袄的神婆。我知道你们觉得我疯了，但那个根本不是神婆。昨晚我亲眼看见她后颈的鳞片在路灯下反光，就像...就像被剥了皮的锦鲤。她的脚步声是倒着走的，你能明白吗？前脚掌先着地。
+
+我现在蜷在304的浴室里打字，水龙头在滴血。不是锈水，我尝过了。十二点整整栋楼的电子钟都在尖叫，但我的手机显示才晚上八点十七分。窗外那些根本不是烟花。
+
+如果天亮后我还没回来，去阁楼找我的寒假作业本。我在最后一页用荧光笔画了......
+
+（草稿在此中断，下方有数道划痕）
+
+<br/>
+
+### 手机备忘录残片
+
+20xx年2月4日 立春
+
+他们说年兽怕红色，可整栋楼的对联都在蜕皮。
+
+早上帮王奶奶贴"福"字时就该注意到的。浆糊从朱红纸背渗出，在墙砖上蜿蜒成青灰色的脉络。那些字在呼吸，真的，当我的手指擦过凸起的印刷纹路时，能感觉到温热的起伏。
+
+现在我知道了，那不是新式立体春联。那些凸起是鳞。
+
+整栋七号楼的防盗门都在凌晨两点自动敞开。我听见302的婴儿哭声从三楼坠到一楼，又从一楼飘回三楼，像被丢进螺旋滑梯的玻璃弹珠。脚步声在防火门外逡巡，不是皮鞋也不是棉拖，是某种角质层刮擦水泥地的声响。
+
+最可怕的是猫。流浪猫们蹲在每层楼的消防栓上，眼睛泛着沼气池的荧绿。它们整齐划一地用后爪挠耳，前爪却死死按住自己的尾巴——仿佛稍一松爪，尾巴就会游进黑暗里。
+
+<br/>
+
+### 天台监控记录（部分）
+
+`23:47:11` 画面出现雪花纹  
+`23:47:29` 备用照明启动，青白色光斑在地面蠕动  
+`23:48:02` 大量旧春联碎片从天井盘旋而上，组成环状结构  
+`23:48:17` 疑似红色长须物从镜头左侧扫过，帧率骤降至5fps  
+`23:48:33` 所有逃生通道指示灯开始逆时针旋转  
+`23:48:59` 水泥护栏呈现软组织质感，监控探头被黏液覆盖  
+
+<br/>
+
+### 最后的手写笔记
+
+真正的年食不是饺子，是时间。它舔舐着爆竹碎屑里的分针，咀嚼门神画里板结的光阴。那些说年兽怕响动的人错了，它只是厌恶被看客打断进食仪式。
+
+我在天台的蓄水箱后面躲了四轮月亮升降。当第四个太阳升起时，对面八号楼的晾衣绳上挂满了我的校服——从小学到高中的每一件，包括被圆珠笔划伤的那件白衬衫。它们正被晨风撕成絮状，飘向某个正在收缩的孔洞。
+
+红灯笼是它的腮。每个灯笼里都鼓动着尚未消化的年岁，你仔细听，能听见1998年的冰雹打在2005年的课桌上。此刻我握着的钢笔正在褪色，字迹将先于我的存在腐朽。
+
+不要寻找我。当你们读到这些文字时，我或许正卡在某道年轮的褶皱里，成为某个孩童窗花上的一粒墨渍。记住，守岁时永远留一盏灯在镜前，镜面要朝着——  
+（笔记在此戛然而止，纸页边缘呈锯齿状啃痕）
