--- a/docs/records/03_2.md
+++ b/docs/records/03_2.md
@@ -1,6 +1,6 @@
 # 第三届，第二组
 
-!!! info "规则说明"
+??? info "规则说明"
 
     **要求**：主题是百合，不能由AI辅助，小说300-1k字，诗歌八行以上。其中允许对百合的广义解读。
     
@@ -8,7 +8,7 @@
 
     **主持人**：鳄鱼在街上摇摆
 
-!!! note "参与者"
+??? note "参与者"
     庞德，别人的电脑，断霞回风，Cat is watching you，风蒲，辰星凌（两篇）。
 
 
